@@ -143,8 +143,6 @@ void PagarDocumentoWin (GtkWidget *widget, gpointer data);
 
 void PagarDocumento (GtkWidget *widget, gpointer data);
 
-void ClearPagosData (void);
-
 void ClosePagarDocumentoWin (GtkWidget *widget, gpointer data);
 
 void on_tree_selection_pending_guide_changed (GtkTreeSelection *selection, gpointer user_data);
