@@ -1,3 +1,7 @@
+2008-06-15  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* compras.c (ClearPagosData): Deleted Function.
+
 2008-06-13  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* postgres-functions.c (AsignarFactAGuia): Changed to use the
